# esp32s3_wearcam

./: .gitignore  README.md
.github/workflows/: pages.yml
dashboard/: README.md  app.js  app.test.js  index.html
docs/: SMOKE.md
docs/superpowers/plans/: 2026-06-29-wearcam-firmware-dashboard.md
docs/superpowers/specs/: 2026-06-29-wearcam-firmware-dashboard-design.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  app_main.c  ble_prov.c  ble_prov.h  camera.c  camera.h  http_server.c  http_server.h  idf_component.yml  ring_buffer.c  ring_buffer.h  wearcam_wifi.c  wearcam_wifi.h
firmware/main/www/: app.js  index.html  style.css
firmware/test_host/: .gitignore  Makefile  test_ring_buffer.c
